up to some() method

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <script src="./js/basics.js"></script>
     <script src="./callbacks.js"></script>
+    <script src="./array-methods.js"></script>
   </body>
 </html>
