задачки з практичного уроку 1

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="./js/basics.js"></script>
     <script src="./callbacks.js"></script>
     <script src="./array-methods.js"></script>
+    <script src="./this.js"></script>
+    <script src="./extra-classes.js"></script>
   </body>
 </html>
