заняття по прототипах та редагує файл додаткових занять

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="./array-methods.js"></script>
     <script src="./this.js"></script>
     <script src="./extra-classes.js"></script>
+    <script src="./prototypes_and_classes.js"></script>
   </body>
 </html>
