--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <a href="events.html">Events file</a>
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
@@ -13,5 +15,6 @@
     <script src="./this.js"></script>
     <script src="./extra-classes.js"></script>
     <script src="./prototypes_and_classes.js"></script>
+    <script src="./object-literals.js"></script>
   </body>
 </html>
