--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <a href="events.html">Events file</a>
-    <link rel="stylesheet" href="style.css" />
+    <!-- <a href="events.html">Events file</a>
+    <link rel="stylesheet" href="style.css" /> -->
     <title>Document</title>
   </head>
   <body>
-    <script src="./js/basics.js"></script>
+    <h1>Перевіряємо перезавантаження!</h1>
+    <!-- <script src="./js/basics.js"></script>
     <script src="./callbacks.js"></script>
     <script src="./array-methods.js"></script>
     <script src="./this.js"></script>
     <script src="./extra-classes.js"></script>
     <script src="./prototypes_and_classes.js"></script>
     <script src="./object-literals.js"></script>
+    <script src="./src/node.js"></script> -->
+    <script src="./index.js"></script>
   </body>
 </html>
